Fixed various layout issues

--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -4,16 +4,15 @@
   padding: 32px 34px 32px 13px;
   width: 320px;
   height: 100vh;
-  z-index: 999999;
   border-radius: 0 18px 18px 0;
   background: #EEEEEE;
   overflow: auto;
   box-shadow: 66px 0px 27px rgba(71, 117, 224, 0.01), 37px 0px 22px rgba(71, 117, 224, 0.05), 17px 0px 17px rgba(71, 117, 224, 0.09), 4px 0px 9px rgba(71, 117, 224, 0.1), 0px 0px 0px rgba(71, 117, 224, 0.1);
   font-family: Inter, sans-serif;
   box-sizing: border-box;
-  font-size: 16px!important;
+  font-size: 16px !important;
 
-  @media only screen and (max-width: 1050px) {
+  @media only screen and (max-width: 720px) {
     padding-top: 0;
     padding-bottom: 0;
     height: auto;
@@ -28,13 +27,13 @@
     height: auto;
 
     &_expanded {
-      height: 100vh!important;
+      height: 100vh !important;
     }
   }
 }
 
 .side-menu__mobile-wrapper {
-  @media only screen and (max-width: 1050px) {
+  @media only screen and (max-width: 720px) {
     padding: 8px 0;
     display: flex;
     align-items: center;
@@ -46,11 +45,7 @@
 }
 
 .side-menu__logo {
-  width: 140px;
-
-  svg {
-    width: 100%;
-  }
+  height: 38px;
 }
 
 .side-menu__connect-wallet {
@@ -173,7 +168,7 @@
   border: 0;
   margin-left: auto;
 
-  @media only screen and (max-width: 1050px) {
+  @media only screen and (max-width: 720px) {
     display: flex;
   }
 }
@@ -197,6 +192,7 @@
   align-items: center;
   border-radius: 15px;
   margin-top: 59px;
+
   span {
     font-family: sans-serif;
     color: black;
